Thu Nov 23 14:09:17 UTC 2006  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/rules.lib.GNU: Corrected error introduced by
          Wed Nov 22 21:53:17 UTC 2006  Steve Huston  <shuston@riverace.com>.

Thu Nov 23 06:53:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/ace_for_tao.mpb:
          Added ACE_LACKS_MSG_WFMO as define, that prevents other projects
          to try to use the msg wfmo reactor which is not available in the
          ace_for_tao configuration

Thu Nov 23 03:14:58 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * tests/Integer_Truncate_Test.cpp:
        * apps/JAWS/clients/WebSTONE/src/README:

          Removed svn:executable property.

Wed Nov 22 23:16:22 UTC 2006  Steve Huston  <shuston@riverace.com>

        * examples/Timer_Queue/Async_Timer_Queue_Test.cpp: Ignore SIGQUIT code
          for platforms with ACE_LACKS_UNIX_SIGNALS. Fixes WinCE build error.

Wed Nov 22 21:58:16 UTC 2006  Steve Huston  <shuston@riverace.com>

        * tests/RB_Tree_Test.cpp: Don't use ACE_ASSERT for code - it doesn't
          get executed in Release builds.

        Pulled these in from the 5.5 stream:

        Mon Nov 20 21:26:24 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/config-win32-msvc.h:
        * ace/OS_Memory.h:
          The MFC new/exception code needed the ability to delete a caught
          CMemoryException object to prevent memory leaks (see
          http://msdn2.microsoft.com/de-de/library/0e5twxsh(VS.80).aspx).
          This necessitates that every platform other than Windows/MFC gets
          an empty define for ACE_del_bad_alloc, and the ACE_NEW... macros
          have ACE_del_bad_alloc expanded in the catch block.
          For past history of this issue, see the trail starting at:
          Tue Aug  8 09:15:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        Thu Nov 16 16:14:32 UTC 2006  Steve Huston  <shuston@riverace.com>
